changed classes in post-creativetim

--- a/partials/post-creativetim.hbs
+++ b/partials/post-creativetim.hbs
@@ -1,4 +1,4 @@
-<article id="theme-1" class="mdl-cell mdl-card angular-expo--shadow" style="display:none;">
+<!-- <article id="theme-1" class="mdl-cell mdl-card angular-expo--shadow" style="display:none;">
   <a class="mdl-card__media" target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321"  onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')">
     <div style="background-image:url({{asset "img/material-dashboard-pro-angular.jpg"}})"></div>
   </a>
@@ -30,4 +30,64 @@
     <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" class="mdl-button" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">Read more</a>
     <span class="mdl-featured">Featured</span>
   </div>
-</article>
+</article> -->
+
+<div class="card" style="width: 18rem; display:none;margin: 8px;width: calc(33.33333% - 16px);" id="theme-1">
+  <a class="card-img-top" target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">
+    <div style="background-image:url({{asset "img/light-bootstrap-dashboard-angular.jpg"}}); height:200px;background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    transition: all .2s ease;
+    -moz-transition: all .2s ease;
+    -ms-transition: all .2s ease;
+    -webkit-transition: all .2s ease;
+    -o-transition: all .2s ease;
+    overflow: hidden;"></div>
+  </a>
+  <div class="card-body">
+    <h2 class="card-title">
+      <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321"  onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')">Material Dashboard Pro</a>
+    </h2>
+    <p class="card-text">Material Dashboard Pro for Angular. Forget about boring dashboards and grab yourself a copy!</p>
+
+  </div>
+  <div class="card-footer">
+    <h3>
+      <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321"  class="btn btn-link" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')">Read more</a>
+      <span class="badge badge-primary badge-lg float-right">Featured</span>
+    </h3>
+  </div>
+</div>
+
+<div class="card" style="width: 18rem; display:none;    margin: 8px;width: calc(33.33333% - 16px);" id="theme-2">
+  <a class="card-img-top" target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">
+    <div style="background-image:url({{asset "img/light-bootstrap-dashboard-angular.jpg"}}); height:200px;background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    transition: all .2s ease;
+    -moz-transition: all .2s ease;
+    -ms-transition: all .2s ease;
+    -webkit-transition: all .2s ease;
+    -o-transition: all .2s ease;
+    overflow: hidden;"></div>
+  </a>
+  <div class="card-body">
+    <h2 class="card-title">
+      <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">Light Bootstrap Dashboard Pro</a>
+    </h2>
+    <p class="card-text">Light Dashboard Pro for Angular. Forget about boring dashboards and grab yourself a copy!</p>
+
+  </div>
+  <div class="card-footer">
+    <h3>
+      <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321"  class="btn btn-link" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">Read more</a>
+      <span class="badge badge-primary badge-lg float-right">Featured</span>
+    </h3>
+  </div>
+</div>
