--- a/partials/post-creativetim0.hbs
+++ b/partials/post-creativetim0.hbs
@@ -32,7 +32,7 @@
   </div>
 </article> -->
 
-<div class="card" style="width: 18rem; display:none;margin: 8px;width: calc(33.33333% - 16px);" id="theme-3">
+<div class="card" style="width: 18rem; display:none;margin: 8px;width: auto;" id="theme-3">
   <a class="card-img-top" target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">
     <div style="background-image:url({{asset "img/light-bootstrap-dashboard-angular.jpg"}}); height:200px;background-repeat: no-repeat;
     background-position: center center;
@@ -62,7 +62,7 @@
   </div>
 </div>
 
-<div class="card" style="width: 18rem; display:none;    margin: 8px;width: calc(33.33333% - 16px);" id="theme-4">
+<div class="card" style="width: 18rem; display:none;    margin: 8px;width: auto;" id="theme-4">
   <a class="card-img-top" target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">
     <div style="background-image:url({{asset "img/light-bootstrap-dashboard-angular.jpg"}}); height:200px;background-repeat: no-repeat;
     background-position: center center;
