--- a/layouts/default.hbs
+++ b/layouts/default.hbs
@@ -21,9 +21,19 @@
   <link rel="stylesheet" href="{{asset 'assets/css/main.css'}}">
 
   {{ghost_head}}
-
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-MHKJWP4');</script>
+  <!-- End Google Tag Manager -->
 </head>
 <body class="{{body_class}} mdl-color-text--grey-700 mdl-base">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MHKJWP4"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     {{navigation}}
