--- a/index.hbs
+++ b/index.hbs
@@ -1,6 +1,6 @@
 {{!< layouts/default}}
 
-<main class="mdl-layout__content" role="main">
+<main class="content" role="main">
   {{> bsa-1  }}
   <div class="page-content">
     {{> "loop"}}
