--- a/page.hbs
+++ b/page.hbs
@@ -2,21 +2,24 @@
 
 {{#post}}
 
-<main class="mdl-layout__content" role="main">
+<main class="content" role="main">
   <div class="page-content">
+    <div class="row">
+      <div class="col-md-2">
 
-    <div class="mdl-grid mdl-grid-fs fixed-width">
-      <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-      <div class="mdl-cell mdl-cell--8-col">
-        {{> bsa-1  }}
-        <article class="mdl-card mdl-card__large mdl-card--no-spacing angular-expo--shadow">
-          <div class="mdl-card__title">
-              <h2 class="mdl-card__title-text"><a href="{{ url }}">{{title}}</a></h2>
-          </div>
-          <div class="mdl-card__supporting-text">
+      </div>
+      <div class="col-md-8">
+          {{> bsa-1  }}
+          <div class="card">
+            <div class="card-header">
+              <div class="card-title">
+                <a href="{{ url }}">{{title}}</a>
+              </div>
+            </div>
+            <div class="card-body">
               {{content}}
+            </div>
           </div>
-        </article>
       </div>
     </div>
 
