--- a/post.hbs
+++ b/post.hbs
@@ -79,8 +79,9 @@
             {{/prev_post}}
           </div>
       </div>
-      <div class="col-md-1"></div>
-      {{> sidebar}}
+      <div class="col-md-3 col-sm-12 ml-auto">
+        {{> sidebar}}
+      </div>
     </div>
   </div>
 </main>
