changes for site structure

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 @import "node_modules/bootstrap/scss/bootstrap";
-
-@import "material/material-design-lite.scss";
-@import "fontello";
-@import "layout";
-@import "dialog";
-@import "slideshow";
-@import "code-fund";
+//
+// @import "material/material-design-lite.scss";
+// @import "fontello";
+// @import "layout";
+// @import "dialog";
+// @import "slideshow";
+// @import "code-fund";
