--- a/post.hbs
+++ b/post.hbs
@@ -4,83 +4,85 @@
 
 <main class="content" role="main">
   <div class="page-content">
-    <div class="row d-flex">
-      <div class="col-md-8">
-          {{> bsa-1  }}
-          <div class="card">
-            <a class="" href="{{ url }}">
-              <img class="article-image" src="{{feature_image}}" border="0" alt="{{title}} - Angular">
-            </a>
-            <div class="card-header">
-              <div class="card-supporting-text">
-                  <time datetime="{{date format="YYYY-MM-DD"}}">{{date format="DD MMMM YYYY"}}</time>
-              </div>
-              <div class="card-title">
-                  <h2 class="card-title-text"><a href="{{ url }}">{{title}}</a></h2>
-              </div>
-            </div>
-            <div class="card-body">
-              <p class="card-text">{{content}}</p>
-            </div>
-            <div class="card-footer">
-              <a class="btn btn-fab btn-mini-fab btn-twitter" href="https://twitter.com/intent/tweet?text={{encode title}}&amp;url={{url absolute="true"}}"
-                  onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
-                  <i class="icon-twitter"></i>
-                  <span class="hidden">Twitter</span>
+    <div class="container-fluid">
+      <div class="row d-flex">
+        <div class="col-md-8">
+            {{> bsa-1  }}
+            <div class="card">
+              <a class="" href="{{ url }}">
+                <img class="article-image" src="{{feature_image}}" border="0" alt="{{title}} - Angular">
               </a>
-              <a class="btn btn-fab btn-mini-fab btn-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
-                  onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
-                  <i class="icon-facebook"></i>
-                  <span class="hidden">Facebook</span>
-              </a>
-              <a class="btn btn-fab btn-mini-fab btn-linkedin" href="http://www.linkedin.com/shareArticle?url={{url absolute="true"}}&title={{title}}"
-                  onclick="window.open(this.href, 'linkedinwindow','left=20,top=20,width=600,height=700,toolbar=0,resizable=1'); return false;">
-                  <i class="icon-linkedin"></i>
-                  <span class="hidden">LinkedIn</span>
-              </a>
-            </div>
-          </div>
-          <div class="row">
-            {{#next_post}}
-              <div class="col-md-6 col-lg-4">
-                <div class="card">
-                  <div class="card-body">
-                    <a class="read-next-story {{#if feature_image}}" style="background-image: url({{feature_image}}){{else}}no-cover{{/if}}" href="{{url}}">
-                      <a class="card-media" href="{{ url }}">
-                        <div class="article-image" style="background-image:url({{feature_image}})"></div>
-                      </a>
-                      <div class="card-title">
-                        <h2 class="card-title-text"><a href="{{ url }}">{{title}}</a></h2>
-                      </div>
-                    </a>
-                  </div>
+              <div class="card-header">
+                <div class="card-supporting-text">
+                    <time datetime="{{date format="YYYY-MM-DD"}}">{{date format="DD MMMM YYYY"}}</time>
                 </div>
+                <div class="card-title">
+                    <h2 class="card-title-text"><a href="{{ url }}">{{title}}</a></h2>
+                </div>
+              </div>
+              <div class="card-body">
+                <p class="card-text">{{content}}</p>
+              </div>
+              <div class="card-footer">
+                <a class="btn btn-fab btn-mini-fab btn-twitter" href="https://twitter.com/intent/tweet?text={{encode title}}&amp;url={{url absolute="true"}}"
+                    onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
+                    <i class="icon-twitter"></i>
+                    <span class="hidden">Twitter</span>
+                </a>
+                <a class="btn btn-fab btn-mini-fab btn-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
+                    onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
+                    <i class="icon-facebook"></i>
+                    <span class="hidden">Facebook</span>
+                </a>
+                <a class="btn btn-fab btn-mini-fab btn-linkedin" href="http://www.linkedin.com/shareArticle?url={{url absolute="true"}}&title={{title}}"
+                    onclick="window.open(this.href, 'linkedinwindow','left=20,top=20,width=600,height=700,toolbar=0,resizable=1'); return false;">
+                    <i class="icon-linkedin"></i>
+                    <span class="hidden">LinkedIn</span>
+                </a>
+              </div>
+            </div>
+            <div class="row">
+              {{#next_post}}
+                <div class="col-md-6 col-lg-4">
+                  <div class="card">
+                    <div class="card-body">
+                      <a class="read-next-story {{#if feature_image}}" style="background-image: url({{feature_image}}){{else}}no-cover{{/if}}" href="{{url}}">
+                        <a class="card-media" href="{{ url }}">
+                          <div class="article-image" style="background-image:url({{feature_image}})"></div>
+                        </a>
+                        <div class="card-title">
+                          <h2 class="card-title-text"><a href="{{ url }}">{{title}}</a></h2>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
 
-              </div>
-            {{/next_post}}
-            {{^next_post}}
-              <div class="col-md-6"></div>
-            {{/next_post}}
-            {{#prev_post}}
-              <div class="col-md-6">
-                <div class="card">
-                  <div class="card-body">
-                    <a class="read-next-story {{#if feature_image}}" style="background-image: url({{feature_image}}){{else}}no-cover{{/if}}" href="{{url}}">
-                      <a class="card-media" href="{{ url }}">
-                        <div class="article-image" style="background-image:url({{feature_image}})"></div>
+                </div>
+              {{/next_post}}
+              {{^next_post}}
+                <div class="col-md-6"></div>
+              {{/next_post}}
+              {{#prev_post}}
+                <div class="col-md-6">
+                  <div class="card">
+                    <div class="card-body">
+                      <a class="read-next-story {{#if feature_image}}" style="background-image: url({{feature_image}}){{else}}no-cover{{/if}}" href="{{url}}">
+                        <a class="card-media" href="{{ url }}">
+                          <div class="article-image" style="background-image:url({{feature_image}})"></div>
+                        </a>
+                        <div class="card-title">
+                          <h2 class="card-title-text"><a href="{{ url }}">{{title}}</a></h2>
+                        </div>
                       </a>
-                      <div class="card-title">
-                        <h2 class="card-title-text"><a href="{{ url }}">{{title}}</a></h2>
-                      </div>
-                    </a>
+                    </div>
                   </div>
                 </div>
-              </div>
-            {{/prev_post}}
-          </div>
-      </div>
-      <div class="col-md-3 col-sm-12 ml-auto">
-        {{> sidebar}}
+              {{/prev_post}}
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-12 ml-auto">
+          {{> sidebar}}
+        </div>
       </div>
     </div>
   </div>
