changed first page structure + style the cards

--- a/partials/post-creativetim.hbs
+++ b/partials/post-creativetim.hbs
@@ -1,19 +1,7 @@
 
-<div class="card" style="width: 18rem; display:none;margin: 8px;width: auto;" id="theme-1">
-  <a class="card-img-top" target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">
-    <div style="background-image:url({{asset "img/light-bootstrap-dashboard-angular.jpg"}}); height:200px;background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    transition: all .2s ease;
-    -moz-transition: all .2s ease;
-    -ms-transition: all .2s ease;
-    -webkit-transition: all .2s ease;
-    -o-transition: all .2s ease;
-    overflow: hidden;"></div>
-  </a>
+<div class="card card-static" id="theme-1">
+  <img class="card-img-top" target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')" src="{{asset "img/light-bootstrap-dashboard-angular.jpg"}}">
+  </img>
   <div class="card-body">
     <h4 class="card-title">
       <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321"  onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')">Material Dashboard Pro</a>
@@ -29,21 +17,9 @@
   </div>
 </div>
 
-<div class="card" style="width: 18rem; display:none;    margin: 8px;width: auto;" id="theme-2">
-  <a class="card-img-top" target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">
-    <div style="background-image:url({{asset "img/light-bootstrap-dashboard-angular.jpg"}}); height:200px;background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    transition: all .2s ease;
-    -moz-transition: all .2s ease;
-    -ms-transition: all .2s ease;
-    -webkit-transition: all .2s ease;
-    -o-transition: all .2s ease;
-    overflow: hidden;"></div>
-  </a>
+<div class="card card-static" id="theme-2">
+  <img class="card-img-top" target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')" src="{{asset "img/light-bootstrap-dashboard-angular.jpg"}}">
+  </img>
   <div class="card-body">
     <h4 class="card-title">
       <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">Light Bootstrap Dashboard Pro</a>
