--- a/partials/post.hbs
+++ b/partials/post.hbs
@@ -1,8 +1,10 @@
 
-<div class="card" style=" margin: 8px;width: calc(33.33333% - 16px);max-height:400px;overflow:hidden">
-  <a class="card-img-top" href="{{ url }}">
+<div class="card">
+    <img src="{{feature_image}}" alt="" class="card-img-top" href="{{ url }}">
+  <!-- <a class="card-img-top" href="{{ url }}">
     <div style="background-image:url({{feature_image}}); height:200px;background-repeat: no-repeat;background-position: center center;  background-attachment: scroll;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;transition: all .2s ease;-moz-transition: all .2s ease;-ms-transition: all .2s ease;-webkit-transition: all .2s ease;-o-transition: all .2s ease;overflow: hidden;" title="{{title}}"></div>
-  </a>
+
+  </a> -->
   <div class="card-body">
     <h4 class="card-title">
       <a target="_blank" href="{{ url }}" >{{title}}</a>
