--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -46,8 +46,8 @@
 {{> post-creativetim0 }}
 
 <script>
-  var randomNumber = Math.floor(Math.random() * (2 - 1 + 1)) + 1;
-  document.getElementById("theme-" + randomNumber).style.display = "block";
+  // var randomNumber = Math.floor(Math.random() * (2 - 1 + 1)) + 1;
+  // document.getElementById("theme-" + randomNumber).style.display = "block";
   var randomNumber2 = Math.floor(Math.random() * (2 - 1 + 1)) + 3;
   document.getElementById("theme-" + randomNumber2).style.display = "block";
 
