--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7065,4 +7065,15 @@ a.text-dark:hover, a.text-dark:focus {
     width: 100%;
     height: auto; }
 
+.card {
+  width: 100%;
+  max-height: 400px;
+  overflow: hidden;
+  margin: 8px; }
+  .card.card-static {
+    display: none; }
+  .card .card-img-top {
+    padding: 12px;
+    max-height: 276px; }
+
 /*# sourceMappingURL=main.css.map */
