--- a/index.hbs
+++ b/index.hbs
@@ -2,7 +2,14 @@
 
 <main class="content" role="main">
   {{> bsa-1  }}
-  <div class="page-content">
-    {{> "loop"}}
+  <div class="container-fluid">
+    <div class="row">
+        <div class="col-md-8">
+          {{> "loop"}}
+        </div>
+        <div class="col-md-4">
+          {{> sidebar}}
+        </div>
+    </div>
   </div>
 </main>
