feature/added and replace navbar logo image

--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,8 +1,8 @@
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-transparent">
   <div class="container">
     <a class="navbar-brand" href="{{@site.url}}">
-      <img alt="Angular Expo" src="{{asset "/img/angular-white-transparent.svg"}}" height="62" width="62">
+      <img alt="Angular Expo" src="{{asset "/img/logo/angular.png"}}" height="24" width="24">
       {{@site.title}}
     </a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
