--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7065,6 +7065,9 @@ a.text-dark:hover, a.text-dark:focus {
     width: 100%;
     height: auto; }
 
+body {
+  background-color: #F8F8FF; }
+
 .card {
   width: 100%;
   max-height: 400px;
