feature/changed over header

--- a/index.hbs
+++ b/index.hbs
@@ -1,7 +1,23 @@
 {{!< layouts/default}}
 
 <main class="content" role="main">
-  {{> bsa-1  }}
+  <div class="section section-header">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5 text-sm-left text-center">
+          <img alt="Angular Expo" src="{{asset "/img/logo/angular.png"}}" height="60" width="60" style="margin-top: 100px">
+          <h1>{{@site.title}}</h1>
+          <p>{{@site.description}}</p>
+          <div class="form-group">
+            <input type="text" placeholder="Success" class="form-control">
+          </div>
+        </div>
+        <div class="col-lg-7">
+
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="container-fluid">
     <div class="row">
         <div class="col-md-8">
