--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -1,3 +1,6 @@
+<div class="card">
+  {{> bsa-1  }}
+</div>
 {{> post-creativetim }}
 <div class="card  angular-expo--shadow">
   <div class="card-header">
