--- a/index.hbs
+++ b/index.hbs
@@ -18,7 +18,7 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid">
+  <div class="container">
     <div class="row">
         <div class="col-md-8">
           {{> "loop"}}
