--- a/assets/scss/custom/_card.scss
+++ b/assets/scss/custom/_card.scss
@@ -2,7 +2,7 @@
   width: 100%;
   max-height: 400px;
   overflow: hidden;
-  margin: 8px;
+  margin-bottom: 30px;
 
   &.card-static{
     display: none;
