--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7072,12 +7072,17 @@ body {
   width: 100%;
   max-height: 400px;
   overflow: hidden;
-  margin-bottom: 30px; }
+  margin-bottom: 30px;
+  border: none;
+  box-shadow: 0 15px 30px 0 rgba(48, 54, 77, 0.1);
+  border-radius: 8px; }
   .card.card-static {
     display: none; }
   .card .card-img-top {
-    padding: 12px;
-    max-height: 276px; }
+    padding: 20px;
+    max-height: 276px;
+    border-radius: 28px;
+    box-shadow: 0 15px 30px 0 rgba(48, 54, 77, 0.1); }
 
 .navbar-transparent {
   background: transparent !important; }
