--- a/assets/scss/custom/_card.scss
+++ b/assets/scss/custom/_card.scss
@@ -3,13 +3,18 @@
   max-height: 400px;
   overflow: hidden;
   margin-bottom: 30px;
+  border: none;
+  box-shadow: 0 15px 30px 0 rgba(48, 54, 77, 0.1);
+  border-radius: 8px;
 
   &.card-static{
     display: none;
   }
 
   .card-img-top{
-    padding: 12px;
+    padding: 20px;
     max-height: 276px;
+    border-radius: 28px;
+    box-shadow: 0 15px 30px 0 rgba(48, 54, 77, 0.1);
   }
 }
