--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7078,10 +7078,13 @@ body {
   border-radius: 8px; }
   .card.card-static {
     display: none; }
+  .card .card-header {
+    background-color: transparent;
+    border-bottom: none;
+    padding: 20px; }
   .card .card-img-top {
-    padding: 20px;
     max-height: 276px;
-    border-radius: 28px;
+    border-radius: 8px;
     box-shadow: 0 15px 30px 0 rgba(48, 54, 77, 0.1); }
 
 .navbar-transparent {
