--- a/assets/scss/custom/_card.scss
+++ b/assets/scss/custom/_card.scss
@@ -11,10 +11,14 @@
     display: none;
   }
 
-  .card-img-top{
+  .card-header{
+    background-color: transparent;
+    border-bottom: none;
     padding: 20px;
+  }
+  .card-img-top{
     max-height: 276px;
-    border-radius: 28px;
+    border-radius: 8px;
     box-shadow: 0 15px 30px 0 rgba(48, 54, 77, 0.1);
   }
 }
