feature/changed static cards structure

--- a/partials/post-creativetim.hbs
+++ b/partials/post-creativetim.hbs
@@ -1,7 +1,10 @@
 
 <div class="card card-static" id="theme-1">
-  <img class="card-img-top" target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')" src="{{asset "img/light-bootstrap-dashboard-angular.jpg"}}">
-  </img>
+  <div class="card-header">
+    <img class="card-img-top" target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')" src="{{asset "img/light-bootstrap-dashboard-angular.jpg"}}">
+    </img>
+  </div>
+
   <div class="card-body">
     <h4 class="card-title">
       <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321"  onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')">Material Dashboard Pro</a>
@@ -18,8 +21,11 @@
 </div>
 
 <div class="card card-static" id="theme-2">
-  <img class="card-img-top" target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')" src="{{asset "img/light-bootstrap-dashboard-angular.jpg"}}">
-  </img>
+  <div class="card-header">
+    <img class="card-img-top" target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')" src="{{asset "img/light-bootstrap-dashboard-angular.jpg"}}">
+    </img>
+  </div>
+
   <div class="card-body">
     <h4 class="card-title">
       <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">Light Bootstrap Dashboard Pro</a>
