--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7086,6 +7086,9 @@ body {
     max-height: 276px;
     border-radius: 8px;
     box-shadow: 0 15px 30px 0 rgba(48, 54, 77, 0.1); }
+  .card .card-footer {
+    background-color: transparent;
+    border-top: none; }
 
 .navbar-transparent {
   background: transparent !important; }
