--- a/assets/scss/custom/_card.scss
+++ b/assets/scss/custom/_card.scss
@@ -16,9 +16,15 @@
     border-bottom: none;
     padding: 20px;
   }
+
   .card-img-top{
     max-height: 276px;
     border-radius: 8px;
     box-shadow: 0 15px 30px 0 rgba(48, 54, 77, 0.1);
+  }
+
+  .card-footer{
+    background-color: transparent;
+    border-top: none;
   }
 }
