feature/img tag added in "a" tag

--- a/partials/post.hbs
+++ b/partials/post.hbs
@@ -1,7 +1,9 @@
 
 <div class="card">
   <div class="card-header">
-    <img src="{{feature_image}}" alt="" class="card-img-top" href="{{ url }}">
+    <a href="{{ url }}">
+      <img src="{{feature_image}}" alt="" class="card-img-top">
+    </a>
   </div>
   <div class="card-body">
     <h4 class="card-title">
