feature/added img tag to an "a" tag

--- a/partials/post-creativetim.hbs
+++ b/partials/post-creativetim.hbs
@@ -1,8 +1,11 @@
 
 <div class="card card-static" id="theme-1">
   <div class="card-header">
-    <img class="card-img-top" target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')" src="{{asset "img/light-bootstrap-dashboard-angular.jpg"}}">
-    </img>
+    <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')" >
+      <img class="card-img-top" src="{{asset "img/light-bootstrap-dashboard-angular.jpg"}}">
+      </img>
+    </a>
+
   </div>
 
   <div class="card-body">
@@ -22,8 +25,9 @@
 
 <div class="card card-static" id="theme-2">
   <div class="card-header">
-    <img class="card-img-top" target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')" src="{{asset "img/light-bootstrap-dashboard-angular.jpg"}}">
-    </img>
+    <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')" >
+      <img class="card-img-top" src="{{asset "img/light-bootstrap-dashboard-angular.jpg"}}"></img>
+    </a>
   </div>
 
   <div class="card-body">
