--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7101,4 +7101,22 @@ body {
   position: relative;
   top: -3px; }
 
+.section-search {
+  max-width: 460px; }
+  .section-search .form-search {
+    position: relative; }
+    .section-search .form-search .form-control-search {
+      border-radius: 30px;
+      box-shadow: 0 15px 30px 0 rgba(48, 54, 77, 0.1);
+      border: none;
+      color: #FFFFFF;
+      display: block;
+      font-size: 20px;
+      font-weight: 300;
+      height: 50px;
+      line-height: 1.42857;
+      padding: 6px 20px;
+      vertical-align: middle;
+      transition: background-color .2s; }
+
 /*# sourceMappingURL=main.css.map */
