feature/changed file name + added margin bottom to section-header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7119,4 +7119,7 @@ body {
       vertical-align: middle;
       transition: background-color .2s; }
 
+.section-header {
+  margin-bottom: 150px; }
+
 /*# sourceMappingURL=main.css.map */
