--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -8,4 +8,4 @@
 @import "custom/misc";
 @import "custom/card";
 @import "custom/navbar";
-@import "custom/section-search";
+@import "custom/sections";
