feature/added class form-subscribe to input

--- a/index.hbs
+++ b/index.hbs
@@ -8,8 +8,8 @@
           <img alt="Angular Expo" src="{{asset "/img/logo/angular.png"}}" height="60" width="60" style="margin-top: 100px">
           <h1>{{@site.title}}</h1>
           <p>{{@site.description}}</p>
-          <div class="form-group">
-            <input type="text" placeholder="Success" class="form-control">
+          <div class="form-group form-subscribe">
+            <input type="text" placeholder="Subscribe" class="form-control">
           </div>
         </div>
         <div class="col-lg-7">
