feature/changed style over form-subscribe

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7109,7 +7109,7 @@ body {
       border-radius: 30px;
       box-shadow: 0 15px 30px 0 rgba(48, 54, 77, 0.1);
       border: none;
-      color: #FFFFFF;
+      color: #223464;
       display: block;
       font-size: 20px;
       font-weight: 300;
@@ -7121,5 +7121,13 @@ body {
 
 .section-header {
   margin-bottom: 150px; }
+  .section-header .form-group.form-subscribe {
+    max-width: 260px; }
+    .section-header .form-group.form-subscribe .form-control {
+      border-radius: 30px;
+      border: 1px solid #223464;
+      color: #223464;
+      display: block;
+      font-weight: 300; }
 
 /*# sourceMappingURL=main.css.map */
