--- a/assets/scss/custom/_sections.scss
+++ b/assets/scss/custom/_sections.scss
@@ -8,7 +8,7 @@
       border-radius: 30px;
       box-shadow: 0 15px 30px 0 rgba(48, 54, 77, 0.1);
       border: none;
-      color: #FFFFFF;
+      color: $text-primary;
       display: block;
       font-size: 20px;
       font-weight: 300;
@@ -22,4 +22,16 @@
 }
 .section-header{
   margin-bottom: 150px;
+
+  .form-group.form-subscribe{
+    max-width: 260px;
+
+    .form-control{
+      border-radius: 30px;
+      border: 1px solid $text-primary;
+      color: $text-primary;
+      display: block;
+      font-weight: 300;
+    }
+  }
 }
