--- a/assets/scss/custom/_misc.scss
+++ b/assets/scss/custom/_misc.scss
@@ -1,3 +1,6 @@
 body{
   background-color: $body-background-color;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  line-height: 1.428571429;
 }
