--- a/index.hbs
+++ b/index.hbs
@@ -9,7 +9,7 @@
           <h1>{{@site.title}}</h1>
           <p>{{@site.description}}</p>
           <div class="form-group form-subscribe">
-            <input type="text" placeholder="Subscribe" class="form-control">
+            <input type="text" placeholder="Your email" class="form-control">
           </div>
         </div>
         <div class="col-lg-7">
@@ -22,7 +22,7 @@
     <div class="form-group form-search">
       <input name="q" id="q" class="form-control form-control-search" placeholder="search">
       <button type="submit" name="button" class="btn btn-white btn-round btn-submit">
-        <i class="icon-search icon-2x"></i>
+        <i class="icon-search fa fa-search"></i>
       </button>
     </div>
   </div>
