--- a/layouts/default.hbs
+++ b/layouts/default.hbs
@@ -19,7 +19,8 @@
   <link rel="icon" sizes="128x128" href="{{asset "/img/icon_128.png"}}">
 
   <link rel="stylesheet" href="{{asset 'assets/css/main.css'}}">
-
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="{{asset "assets/font/font-awesome/css/font-awesome.css"}}">
   {{ghost_head}}
 
 </head>
