--- a/partials/post.hbs
+++ b/partials/post.hbs
@@ -15,7 +15,7 @@
   </div>
   <div class="card-footer">
     <h6>
-      <a target="_blank" class="btn btn-link" href="{{ url }}">Read more</a>
+      <a target="_blank" class="btn btn-link btn-danger btn-round" href="{{ url }}">Read more</a>
     </h6>
   </div>
 </div>
