--- a/partials/post.hbs
+++ b/partials/post.hbs
@@ -6,16 +6,9 @@
     </a>
   </div>
   <div class="card-body">
-    <h5 class="card-title">
-      <a target="_blank" href="{{ url }}" >{{title}}</a>
-    </h5>
-    <p class="card-text">{{content}}</p>
-    <time datetime="{{date format="YYYY-MM-DD"}}">{{date format="DD MMMM YYYY"}}</time>
-
+    <a class="card-title" target="_blank" href="{{ url }}" >{{title}}</a>
   </div>
   <div class="card-footer">
-    <h6>
-      <a target="_blank" class="btn btn-link btn-danger btn-round" href="{{ url }}">Read more</a>
-    </h6>
+    <a target="_blank" class="btn btn-danger btn-round" href="{{ url }}">Read more</a>
   </div>
 </div>
